- fix typeahead search result issue on mobile

--- a/Modules/site/Header.Site@dev/Sass/_header.scss
+++ b/Modules/site/Header.Site@dev/Sass/_header.scss
@@ -36,7 +36,6 @@
 	display: block;
 	@media(max-width: $screen-md-min){
 		display: none;
-		width: 100%;
-		overflow: hidden;
+		width: 94%;
 	}
 }
